[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.6.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tiny_http = "0.12.0"
xml-rs = "0.8.4"
